Tekstjes en keywords

--- a/elements/footer.html
+++ b/elements/footer.html
@@ -1,13 +1,9 @@
 <footer class="page-footer blue">
-    <div class="container">
+    <!-- <div class="container">
         <div class="row">
             <div class="col l6 s12">
                 <h5 class="white-text">Noxus</h5>
-                <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's
-                    our full time job. Any amount would help support and continue development on this project and is
-                    greatly appreciated.</p>
-
-
+                <p class="grey-text text-lighten-4">.</p>
             </div>
             <div class="col l3 s12">
                 <h5 class="white-text">Settings</h5>
@@ -28,11 +24,12 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="footer-copyright">
         <div class="container">
-            Made by <a class="orange-text text-lighten-3" href="http://github.com/Guusvanmeerveld">Guus van Meerveld</a>
-            and <a class="orange-text text-lighten-3" href="http://github.com/Netfloex">Sam Taen</a>
+            Gemaakt door <a class="orange-text text-lighten-3" href="http://github.com/Guusvanmeerveld">Guus van
+                Meerveld</a>
+            en <a class="orange-text text-lighten-3" href="http://github.com/Netfloex">Sam Taen</a>
         </div>
     </div>
 </footer>
