--- a/elements/nav.html
+++ b/elements/nav.html
@@ -3,11 +3,11 @@
         <a href="/"><img src="/img/icon-trans.png" id="logo-container" class="brand-logo logo"></img></a>
 
         <ul class="right hide-on-med-and-down">
-            <li><a href="/download">Download nu</a></li>
+            <li><a href="https://magistex.samtaen.nl/latest">Download nu</a></li>
         </ul>
 
         <ul id="nav-mobile" class="sidenav grey darken-4">
-            <li><a href="/download">Download nu</a></li>
+            <li><a href="https://magistex.samtaen.nl/latest">Download nu</a></li>
         </ul>
         <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
